--- a/templates/login.html
+++ b/templates/login.html
@@ -56,7 +56,7 @@
                         <small class="text-white-50 mt-2 note-animate">
                             <i class="bi bi-info-circle me-1 text-success"></i>
                             NOTE - password is the default. You can contact the  
-                            <a href="https://www.spidey.io" target="_blank" class="note-link fw-bold glow-on-hover">admin</a> 
+                            <a href="https://www.example.com" target="_blank" class="note-link fw-bold glow-on-hover">admin</a> 
                             to the login
                         </small>
                     </div>
