--- a/templates/login.html
+++ b/templates/login.html
@@ -1,3 +1,13 @@
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+<!--  <title>Your Page Title</title> -->
+
+  <!-- Favicon (shown in browser tab) -->
+  <link rel="icon" type="image/png" href="https://envs.sh/ta-.png">
+</head>
 {% extends "base.html" %}
 
 {% block title %}Login - SecureChat{% endblock %}
