--- a/templates/chat.html
+++ b/templates/chat.html
@@ -1,3 +1,10 @@
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>{% block title %}CipherChat{% endblock %}</title>
+    <link rel="icon" type="image/png" href="https://envs.sh/ta-.png">
 {% extends "base.html" %}
 
 {% block title %}SecureChat - Private Messaging{% endblock %}
