--- a/templates/dynamic_verify.html
+++ b/templates/dynamic_verify.html
@@ -1,3 +1,4 @@
+ <link rel="icon" type="image/png" href="https://envs.sh/ta-.png">
 {% extends "base.html" %}
 
 {% block title %}Dynamic Password - SecureChat{% endblock %}
